ingress-egress/service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: app-x-dev
spec:
  selector:
    app: frontend
  ports:
  - port: 80
    targetPort: 8080
