ingress-egress/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: frontend
  namespace: app-x-dev
spec:
  host: app.meucliente.com
  to:
    kind: Service
    name: frontend
  port:
    targetPort: 80
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
